--- a/conception.tex
+++ b/conception.tex
@@ -2,31 +2,22 @@
 % Conception (inclut Identité Visuelle)
 % ===============================
 
-% --- Introduction non numérotée ---
-\begin{center}
-\textbf{\large Introduction du Chapitre}
-\end{center}
-
-\noindent
-Ce chapitre présente la démarche de conception de VoiceNotion, en détaillant la méthodologie de planification, la conception UX, la modélisation, ainsi que l'identité visuelle de la marque. L'objectif est d'expliquer comment les choix de conception soutiennent la vision, l'expérience utilisateur et la cohérence de la marque.
+\section*{Introduction}
+\addcontentsline{toc}{section}{Introduction}
+Ce chapitre présente la démarche de conception de SayNote, en détaillant la méthodologie de planification, la conception UX, la modélisation, ainsi que l'identité visuelle de la marque. L'objectif est d'expliquer comment les choix de conception soutiennent la vision, l'expérience utilisateur et la cohérence de la marque.
 
 % ===============================
 % Section 1: Planification et UX
 % ===============================
 \section{Planification et conception UX}
-\input{voicenotion_planification_ux}
+\input{saynote_planification_ux}
 
 % ===============================
 % Section 2: Identité Visuelle
 % ===============================
 \section{Identité visuelle}
-\input{voicenotion_visual_identity}
+\input{saynote_visual_identity}
 
-% --- Conclusion non numérotée ---
-\vspace{1cm}
-\begin{center}
-\textbf{\large Conclusion du Chapitre}
-\end{center}
-
-\noindent
-Ce chapitre a mis en lumière l'importance d'une conception réfléchie, de la planification à l'identité visuelle. L'intégration de l'UX et du branding garantit une expérience utilisateur optimale et une marque forte, éléments essentiels pour le succès et la différenciation du projet VoiceNotion.
+\section*{Conclusion}
+\addcontentsline{toc}{section}{Conclusion}
+Ce chapitre a mis en lumière l'importance d'une conception réfléchie, de la planification à l'identité visuelle. L'intégration de l'UX et du branding garantit une expérience utilisateur optimale et une marque forte, éléments essentiels pour le succès et la différenciation du projet SayNote.
